Styling add-employee, rooms, And reservations

--- a/src/app/components/admin/add-employee/add-employee.component.html
+++ b/src/app/components/admin/add-employee/add-employee.component.html
@@ -13,7 +13,7 @@
             <span
               class="input-group-text align-self-center bg-white"
               id="basic-addon1"
-              ><i class="fa-solid fa-user" style="color: #725529"></i>
+              ><i class="fa-solid fa-user"></i>
             </span>
           </div>
           <input
@@ -44,7 +44,7 @@
             <span
               class="input-group-text align-self-center bg-white"
               id="basic-addon1"
-              ><i class="fa-solid fa-envelope" style="color: #725529"></i>
+              ><i class="fa-solid fa-envelope"></i>
             </span>
           </div>
           <input
@@ -78,7 +78,7 @@
               class="input-group-text align-self-center bg-white"
               id="basic-addon1"
             >
-              <i class="fa-solid fa-phone" style="color: #725529"></i>
+              <i class="fa-solid fa-phone"></i>
             </span>
           </div>
           <input
@@ -111,7 +111,8 @@
             <span
               class="input-group-text align-self-center bg-white"
               id="basic-addon1"
-              ><i class="bi bi-briefcase-fill" style="color: #725529"></i>
+            >
+              <i class="fa-solid fa-briefcase"></i>
             </span>
           </div>
           <input
@@ -144,7 +145,7 @@
               class="input-group-text align-self-center bg-white"
               id="basic-addon1"
             >
-              <i class="fa-solid fa-lock" style="color: #725529"></i>
+              <i class="fa-solid fa-lock"></i>
             </span>
           </div>
           <input
@@ -184,7 +185,7 @@
               class="input-group-text align-self-center bg-white"
               id="basic-addon1"
             >
-              <i class="fa-solid fa-check-double" style="color: #725529"></i>
+              <i class="fa-solid fa-check-double"></i>
             </span>
           </div>
           <input
@@ -217,9 +218,9 @@
 
 <button class="mt-4 btn-outline-primary rounded-2" (click)="goBack()">
   @if(lang == 'ar') {
-  <i class="bi bi-arrow-right"></i>
+  <i class="fa-solid fa-arrow-right"></i>
   } @else {
-  <i class="bi bi-arrow-left"></i>
+  <i class="fa-solid fa-arrow-left"></i>
   }
   {{ "shared.action.go-back" | translate }}
 </button>
