--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -1,5 +1,10 @@
+<div class="d-flex">
+  <h1 class="m-4 mb-4">{{ "reservation.reservations" | translate }}</h1>
+  <img src="/assets/images/reservations-brown-filled-icon.png" />
+</div>
+
 <div class="page">
-  <h1 class="m-4 mb-4">{{ "reservation.pending-reservations" | translate }}</h1>
+  <h1 class="m-4 mb-4">{{ "reservation.pending" | translate }}</h1>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
       <thead>
@@ -55,7 +60,7 @@
     </table>
   </div>
 
-  <h1 class="m-4 mb-4">{{ "reservation.active-reservations" | translate }}</h1>
+  <h1 class="m-4 mb-4">{{ "reservation.active" | translate }}</h1>
   <div class="rounded-4 shadow border overflow-hidden">
     <table class="table table-striped table-bordered mb-0">
       <thead>
@@ -103,7 +108,7 @@
       type="button"
       pButton
       icon="pi pi-times"
-      label="Delete"
+      label="Reject"
       [ngStyle]="{ backgroundColor: '#e09fa6', border: 'red' }"
       (click)="cd.onAccept()"
     ></button>
