--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,84 +1,71 @@
 <header>
-  <div>
+  <div class="header-container">
     <a
-      class="ms-3"
+      class="logo"
       [routerLink]="''"
       routerLinkActive="active-link"
       [routerLinkActiveOptions]="{ exact: true }"
     >
-      <img
-        class="linear-icon"
-        src="/assets/images/hotel-linear-icon.png"
-        alt="hotel icon"
-      />
-      {{ "app.title" | translate }}
+      <img class="logo" src="/assets/images/logo.png" alt="logo" />
+      <!-- {{ "app.title" | translate }} -->
     </a>
-    @if(role == 'Admin'){
-    <a [routerLink]="`/admin/manage-users`" routerLinkActive="active-link">
-      <img
-        class="fill-icon"
-        src="/assets/images/manage-users-filled-icon.png"
-        alt="manage-users"
-      />
-      {{ "header.admin.manage-users" | translate }}
-    </a>
-    <a [routerLink]="`/rooms`" routerLinkActive="active-link">
-      <img
-        class="fill-icon"
-        src="/assets/images/bed-filled-icon.png"
-        alt="room icon"
-      />
-      {{ "header.admin.rooms" | translate }}
-    </a>
-    <a [routerLink]="`/admin/reservations`" routerLinkActive="active-link">
-      <img
-        class="linear-icon p-1"
-        src="/assets/images/reservations-filled-icon.png"
-        alt="reservations icon"
-      />
-      {{ "header.admin.reservations" | translate }}
-    </a>
-    } @if(role == 'Customer'){
-    <a [routerLink]="`/my-reservations`" routerLinkActive="active-link">
-      {{ "header.customer.my-reservations" | translate }}
-    </a>
-    <a [routerLink]="`/available-services`" routerLinkActive="active-link">
-      {{ "header.customer.available-services" | translate }}
-    </a>
-    }
-  </div>
-  <div>
-    @if(isLoggedIn){
-    <a
-      [routerLink]="`/profile/${userId}`"
-      routerLinkActive="active-link"
-      (click)="goToProfile(userId!)"
-      >{{ "header.auth.welcome" | translate }}, {{ name }}
-      <img
-        class="linear-icon"
-        src="/assets/images/waving-hand-linear-icon.svg"
-        alt="waving hand icon"
-      />
-    </a>
-    <a (click)="logout()"
-      >{{ "header.auth.logout" | translate
-      }}<i class="fa-solid fa-arrow-right-from-bracket"></i>
-      <!-- <img src="/assets/images/logout-linear-icon.webp" alt="logout icon" /> -->
-    </a>
-    } @else{
-    <a [routerLink]="'/login'" routerLinkActive="active-link"
-      >{{ "header.auth.login" | translate }}
-      <i class="fill-icon fa-solid fa-arrow-right-to-bracket fa-lg"></i>
-      <!-- <img src="/assets/images/login-linear-icon.webp" alt="login icon" /> -->
-    </a>
-    <a [routerLink]="'/signup'" routerLinkActive="active-link"
-      >{{ "header.auth.register" | translate }}
-      <img
-        class="fill-icon"
-        src="/assets/images/sign-up-filled-icon.png"
-        alt="sign up icon"
-      />
-    </a>
-    }
+
+    <button class="burger" (click)="isMenuOpen = !isMenuOpen">
+      <i class="fa-solid fa-bars fa-lg" style="color: #fbebd4"></i>
+    </button>
+
+    <nav [class.open]="isMenuOpen">
+      <div class="nav-left">
+        @if(role == 'Admin'){
+        <a [routerLink]="'/admin/manage-users'" routerLinkActive="active-link">
+          {{ "header.admin.manage-users" | translate }}
+        </a>
+        <a [routerLink]="'/rooms'" routerLinkActive="active-link">
+          {{ "header.admin.rooms" | translate }}
+        </a>
+        <a [routerLink]="'/admin/reservations'" routerLinkActive="active-link">
+          {{ "header.admin.reservations" | translate }}
+        </a>
+        } @if(role == 'Customer'){
+        <a [routerLink]="'/my-reservations'" routerLinkActive="active-link">
+          {{ "header.customer.my-reservations" | translate }}
+        </a>
+        <a [routerLink]="'/available-services'" routerLinkActive="active-link">
+          {{ "header.customer.available-services" | translate }}
+        </a>
+        }
+      </div>
+
+      <div class="nav-right">
+        @if(isLoggedIn){
+        <a [routerLink]="'/profile/' + userId" (click)="goToProfile(userId!)">
+          <img
+            class="pfp"
+            [src]="
+              pfp
+                ? pfp
+                : '../../../../../assets/images/profile-default-image.png'
+            "
+          />
+          {{ name }}
+        </a>
+        <a [routerLink]="'/login'" (click)="logout()">
+          {{ "header.auth.logout" | translate }}
+          <i class="fa-solid fa-arrow-right-from-bracket"></i>
+        </a>
+        } @else{
+        <a [routerLink]="'/login'">
+          {{ "header.auth.login" | translate }}
+          <i class="fill-icon fa-solid fa-arrow-right-to-bracket fa-lg"></i>
+          <!-- <img src="/assets/images/login-linear-icon.webp" alt="login icon" /> -->
+        </a>
+        <a [routerLink]="'/signup'">
+          {{ "header.auth.register" | translate }}
+          <img class="fill-icon" src="/assets/images/sign-up-filled-icon.png" />
+          <!-- <img src="/assets/images/logout-linear-icon.webp" alt="logout icon" /> -->
+        </a>
+        }
+      </div>
+    </nav>
   </div>
 </header>
