Show Element If Data Does Not Exist

--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -32,7 +32,15 @@
           <td>{{ user.id }}</td>
           <td>{{ user.name }}</td>
           <td>{{ user.email }}</td>
-          <td>{{ user.phone }}</td>
+          <td>
+            @if(user?.phone){
+            {{ user?.phone }}
+            } @else {
+            <span style="color: gray; font-style: italic">{{
+              "user.not-provided" | translate
+            }}</span>
+            }
+          </td>
           <td>{{ user.role }}</td>
           <td>
             <button
