--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,21 +1,20 @@
 <footer>
   <a
     (click)="changeLanguage('en')"
-    [class]="lang == 'en' ? 'text-bold h5 text-black' : 'text-black pb-2'"
+    [class]="
+      lang == 'en' ? 'text-bold h5 text-black text-decoration-underline' : 'text-black pb-2'
+    "
   >
-    <img src="/assets/images/uk-flag-icon.png" alt="uk flag icon" />
     {{ "footer.english" | translate }}</a
   >
 
   <img class="ms-3 me-3" src="/assets/images/star-icon.png" alt="star icon" />
   <a
     (click)="changeLanguage('ar')"
-    [class]="lang == 'en' ? 'text-black pb-2' : 'text-bold h5 text-black'"
+    [class]="
+      lang == 'en' ? 'text-black pb-2' : 'text-bold h5 text-black text-decoration-underline'
+    "
   >
-    <img
-      src="/assets/images/saudi-arabia-flag-icon.webp"
-      alt="saudi arabia flag icon"
-    />
     {{ "footer.arabic" | translate }}</a
   >
 </footer>
