Use Red and Green Colors

--- a/src/app/components/admin/manage-users/manage-users.component.scss
+++ b/src/app/components/admin/manage-users/manage-users.component.scss
@@ -23,10 +23,10 @@ tr {
   color: $color-caramel;
 }
 .approve {
-  color: #abf7b1;
+  color: $color-light-green;
 }
 .reject {
-  color: #faa0a0;
+  color: $color-light-red;
 }
 
 img {
