--- a/src/app/components/admin/reservations/reservations.component.scss
+++ b/src/app/components/admin/reservations/reservations.component.scss
@@ -23,10 +23,10 @@ button {
   color: $color-caramel;
 }
 .approve {
-  color: #adebb3;
+  color: $color-light-green;
 }
 .reject {
-  color: #f88379;
+  color: $color-light-red;
 }
 
 img {
