--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,13 @@
+$color-light-cream: #faf3e8;
 $color-cream: #fbebd4;
 $color-tan: #d0b998;
 $color-caramel: #ad926b;
 $color-brown: #8a704a;
 $color-dark-brown: #725529;
+
+$color-light-green: #abf7b1;
+$color-light-red: #faa0a0;
+$color-red: #e74c4c;
 
 $background-color: $color-cream;
 $border-color: $color-tan;
