update style and toast massege and formating the doc

--- a/src/app/components/shared/auth/login/login.component.html
+++ b/src/app/components/shared/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <ngb-toast
   *ngIf="showToast"
-  header="Info"
-  class="bg-info text-white position-fixed top-0 end-0 m-3"
+
+  class="bg-success text-white position-fixed top-0 end-0 m-3"
   [autohide]="true"
   [delay]="3000"
   (hidden)="showToast = false"
