--- a/src/app/components/customer/my-reservations/my-reservations.component.html
+++ b/src/app/components/customer/my-reservations/my-reservations.component.html
@@ -7,7 +7,7 @@
       <div class="row g-0">
         <div class="col-md-4">
           <img
-            [src]="reservation.room.imageUrl"
+            [src]="reservation.room.imagesUrl"
             class="img-fluid rounded-start"
             alt="Room Image"
           />
