--- a/src/app/components/admin/rooms/rooms.component.html
+++ b/src/app/components/admin/rooms/rooms.component.html
@@ -1,4 +1,3 @@
-
 <div class="d-flex justify-content-between mt-2 ms-5 me-5">
   <h1 class="text-center align-self-center">
     {{ "room.rooms" | translate }}
@@ -28,34 +27,38 @@
       [src]="room.imagesUrl[0]"
       (click)="showRoomDetails(room.id)"
     />
-    <div class="room-info" (click)="showRoomDetails(room.id)">
-      <h4>{{ room.title }}</h4>
-      <div>
-        <strong class="me-2">{{ "room.type" | translate }}:</strong>
-        @if(room.roomType == 'Hall'){
-        <img
-          class="icon-img mb-1"
-          src="../../../../assets/images/hall-filled-icon.png"
-        />
-        } @else {
-        <i class="fa-solid fa-bed" style="color: #ad926b"></i>
-        } {{ room.roomType }}
-      </div>
-      <div>
-        <strong class="me-2">{{ "room.booked-status" | translate }}:</strong>
-        <span
-          [style.color]="room.bookedStatus === 'Available' ? 'green' : 'red'"
-        >
-          {{ room.bookedStatus }}</span
-        >
-      </div>
-      <div>
-        <strong class="me-2">{{ "room.price" | translate }}:</strong
-        >{{ room.price | currency : "USD" : "symbol" : "1.0-0" }}
+    <div class="room-info">
+      <div class="room-content" (click)="showRoomDetails(room.id)">
+        <h4>{{ room.title }}</h4>
+        <div>
+          <strong class="me-2">{{ "room.type" | translate }}:</strong>
+          @if(room.roomType == 'Hall'){
+          <img
+            class="icon-img mb-1"
+            src="../../../../assets/images/hall-filled-icon.png"
+          />
+          } @else {
+          <i class="fa-solid fa-bed" style="color: #ad926b"></i>
+          } {{ room.roomType }}
+        </div>
+        <div>
+          <strong class="me-2">{{ "room.booked-status" | translate }}:</strong>
+          <span
+            [style.color]="room.bookedStatus === 'Available' ? 'green' : 'red'"
+          >
+            {{ room.bookedStatus }}</span
+          >
+        </div>
+        <div>
+          <strong class="me-2">{{ "room.price" | translate }}:</strong
+          >{{ room.price | currency : "USD" : "symbol" : "1.0-0" }}
+        </div>
       </div>
       @if(role != 'Admin'){
-   <button class="book-btn btn-primary" (click)="bookRoom(room)">Book Now</button>
-      
+      <button class="book-btn btn-primary" (click)="bookRoom(room)">
+        Book Now
+      </button>
+
       }
     </div>
   </div>
