--- a/src/app/components/customer/my-reservations/my-reservations.component.html
+++ b/src/app/components/customer/my-reservations/my-reservations.component.html
@@ -1,4 +1,3 @@
-
 <div class="container mt-4">
   <h2 class="text-center mb-4">My Reservations</h2>
 
@@ -7,7 +6,7 @@
       <div class="row g-0">
         <div class="col-md-4">
           <img
-            [src]="reservation.room.imagesUrl"
+            [src]="reservation.room.imagesUrl[0]"
             class="img-fluid rounded-start"
             alt="Room Image"
           />
@@ -18,8 +17,12 @@
             <p class="card-text">
               <strong>Type:</strong> {{ reservation.room.roomType }}<br />
               <strong>Hotel:</strong> {{ reservation.room.hotel }}<br />
-              <strong>Date:</strong> {{ reservation.date | date: 'mediumDate' }}<br />
-              <strong>Payment:</strong> {{ reservation.paymentAmount | currency:'USD' }} ({{ reservation.paymentStatus }})<br />
+              <strong>Date:</strong> {{ reservation.date | date : "mediumDate"
+              }}<br />
+              <strong>Payment:</strong>
+              {{ reservation.paymentAmount | currency : "USD" }} ({{
+                reservation.paymentStatus
+              }})<br />
               <strong>Status:</strong>
               <span
                 [ngClass]="{
